# study-java

./: .editorconfig  .gitattributes  .gitignore  README.md  build.gradle  clear.sh  cspell.json  eclipse-formatter.xml  gradle.properties  lombok.config  pom-spring-boot2.xml  pom-spring-boot3.xml  pom-spring-cloud.xml  pom.xml  settings.gradle
.data/: dev.mv.db
async/: build.gradle  pom.xml
boot-aop/: README.md  build.gradle  pom.xml
boot-dynamic-ds/: build.gradle  pom.xml
boot-graphql/: README.md  build.gradle  pom.xml
boot-jooq/: README.md  build.gradle  pom.xml
boot-jpa/: build.gradle  pom.xml
boot-multi-ds/: build.gradle  pom.xml
boot-mvc/: build.gradle  pom.xml
boot-mybatis/: build.gradle  pom.xml
boot-security/: build.gradle  pom.xml
boot-shiro/: build.gradle  pom.xml
boot-spel/: build.gradle  pom.xml
boot-springdoc/: build.gradle  pom.xml
boot-testing/: build.gradle  pom.xml
boot-validator/: build.gradle  pom.xml
cli/: README.md  build.gradle  pom.xml
cloud-eureka/: README.md  build.gradle  pom.xml
cloud-gateway/: README.md  build.gradle  pom.xml
cloud-nacos/: README.md  build.gradle  pom.xml
gradle/: depends-common.gradle  depends-spring-boot.gradle  depends-spring-cloud.gradle  depends.gradle
guava/: build.gradle  pom.xml
guice/: build.gradle  pom.xml
jackson/: pom.xml
misc/: build.gradle  pom.xml
opta/: README.MD  README.md  pom.xml
quarkus/: README.md  build.gradle  pom-quarkus.xml  pom.xml
se/: build.gradle  pom.xml
se/runtime/src/main/cpp/: CMakeLists.txt  README.md  jni_demo.cpp  jni_demo.h
(+2671 files in other folders)
